tests/models/enum/named/i8/fail/max_items.rs
use dade::model;
#[model]
enum TestModel {
    Value {
        #[field(max_items = 2)]
        value: i8
    },
}
fn main() {}
